brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 10620
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                    "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
