brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: normalize_snapshot_paths(rendered)
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p brocode-core -- --exact…


› Ask Brocode to do anything

  gpt-5.3-brocode default · 100% left · /tmp/pr…
